--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
         전철 운행 정보
     </title>
     <style>
-        @font-face {
-            font-family: 'NanumSquare';
-            src: url(NanumSquareR.woff);
-        }
-
         body {
             margin: 0px;
             text-align: center;
@@ -80,6 +75,7 @@
 </head>
 
 <body>
+    <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square.css" rel="stylesheet">
     <div class=header>
         전철 운행 정보
     </div>
