--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
             data.data.forEach((e, i) => {
                 const pos = mapData[lineId].points[i];
                 if (e.up) {
-                    src += '<image xlink:href="./up.png" x="' + (pos.x - 30) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
+                    src += '<image xlink:href="./images/up.png" x="' + (pos.x - 30) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
                 }
                 if (e.dn) {
-                    src += '<image xlink:href="./dn.png" x="' + (pos.x + 10) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
+                    src += '<image xlink:href="./images/dn.png" x="' + (pos.x + 10) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
                 }
             })
             document.getElementById("subway_map").innerHTML = map + src;
