--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@
             lines['7호선'] = 1007;
             lines['8호선'] = 1008;
             lines['9호선'] = 1009;
+            lines['경의중앙선'] = 1101;
             return lines[name] === undefined ? null : lines[name];
         }
 
@@ -420,6 +421,74 @@
                 {x: 100, y: 2700, sta: '양천구청'},
                 {x: 100, y: 2800, sta: '신정네거리'},
                 {x: 100, y: 2900, sta: '까치산'}
+            ]
+        };
+        mapData[1101] = {
+            color: '#77C4A3',
+            height: 5400,
+            lines: [{
+                type: 'polyline',
+                data: '100,100 100,5300'
+            }, {
+                type: 'polyline',
+                data: '100,2000 150,2050 450,2050 500,2100 500,2200'
+            }],
+            points: [
+                {x: 100, y: 100, sta: '문산'},
+                {x: 100, y: 200, sta: '파주'},
+                {x: 100, y: 300, sta: '월롱'},
+                {x: 100, y: 400, sta: '금촌'},
+                {x: 100, y: 500, sta: '금릉'},
+                {x: 100, y: 600, sta: '운정'},
+                {x: 100, y: 700, sta: '야당'},
+                {x: 100, y: 800, sta: '탄현'},
+                {x: 100, y: 900, sta: '일산'},
+                {x: 100, y: 1000, sta: '풍산'},
+                {x: 100, y: 1100, sta: '백마'},
+                {x: 100, y: 1200, sta: '곡산'},
+                {x: 100, y: 1300, sta: '대곡'},
+                {x: 100, y: 1400, sta: '능곡'},
+                {x: 100, y: 1500, sta: '행신'},
+                {x: 100, y: 1600, sta: '강매'},
+                {x: 100, y: 1700, sta: '화전'},
+                {x: 100, y: 1800, sta: '수색'},
+                {x: 100, y: 1900, sta: '디지털미디어시티'},
+                {x: 100, y: 2000, sta: '가좌'},
+                {x: 500, y: 2100, sta: '신촌'},
+                {x: 500, y: 2200, sta: '서울역'},
+                {x: 100, y: 2100, sta: '홍대입구'},
+                {x: 100, y: 2200, sta: '서강대'},
+                {x: 100, y: 2300, sta: '공덕'},
+                {x: 100, y: 2400, sta: '효창공원앞'},
+                {x: 100, y: 2500, sta: '용산'},
+                {x: 100, y: 2600, sta: '이촌'},
+                {x: 100, y: 2700, sta: '서빙고'},
+                {x: 100, y: 2800, sta: '한남'},
+                {x: 100, y: 2900, sta: '옥수'},
+                {x: 100, y: 3000, sta: '응봉'},
+                {x: 100, y: 3100, sta: '왕십리'},
+                {x: 100, y: 3200, sta: '청량리'},
+                {x: 100, y: 3300, sta: '회기'},
+                {x: 100, y: 3400, sta: '중랑'},
+                {x: 100, y: 3500, sta: '상봉'},
+                {x: 100, y: 3600, sta: '망우'},
+                {x: 100, y: 3700, sta: '앙원'},
+                {x: 100, y: 3800, sta: '구리'},
+                {x: 100, y: 3900, sta: '도농'},
+                {x: 100, y: 4000, sta: '양정'},
+                {x: 100, y: 4100, sta: '덕소'},
+                {x: 100, y: 4200, sta: '도심'},
+                {x: 100, y: 4300, sta: '팔당'},
+                {x: 100, y: 4400, sta: '운길산'},
+                {x: 100, y: 4500, sta: '양수'},
+                {x: 100, y: 4600, sta: '신원'},
+                {x: 100, y: 4700, sta: '국수'},
+                {x: 100, y: 4800, sta: '아신'},
+                {x: 100, y: 4900, sta: '오빈'},
+                {x: 100, y: 5000, sta: '양평'},
+                {x: 100, y: 5100, sta: '원덕'},
+                {x: 100, y: 5200, sta: '용문'},
+                {x: 100, y: 5300, sta: '지평'}
             ]
         };
 
