--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 data: '500,5800 450,5850 350,5850 300,5900'
             }],
             points: [
-                {x: 100, y: 100, sta: '소요산'},
+                {x: 100, y: 100, sta: '소요산'}, //경원선 시작
                 {x: 100, y: 200, sta: '동두천'},
                 {x: 100, y: 300, sta: '보산'},
                 {x: 100, y: 400, sta: '동두천중앙'},
@@ -275,7 +275,7 @@
                 {x: 100, y: 2200, sta: '신이문'},
                 {x: 100, y: 2300, sta: '외대앞'},
                 {x: 100, y: 2400, sta: '회기'},
-                {x: 100, y: 2500, sta: '청량리'},
+                {x: 100, y: 2500, sta: '청량리'}, //경원선&종로선 경계
                 {x: 100, y: 2600, sta: '제기동'},
                 {x: 100, y: 2700, sta: '신설동'},
                 {x: 100, y: 2800, sta: '동묘앞'},
@@ -292,7 +292,7 @@
                 {x: 100, y: 3900, sta: '신길'},
                 {x: 100, y: 4000, sta: '영등포'},
                 {x: 100, y: 4100, sta: '신도림'},
-                {x: 100, y: 4200, sta: '구로'},
+                {x: 100, y: 4200, sta: '구로'}, //경인선 분기. 일단 경부선 따라감
                 {x: 500, y: 4300, sta: '가산디지털단지'},
                 {x: 500, y: 4400, sta: '독산'},
                 {x: 500, y: 4500, sta: '금천구청'},
@@ -318,9 +318,9 @@
                 {x: 100, y: 6500, sta: '평택지제'},
                 {x: 100, y: 6600, sta: '평택'},
                 {x: 100, y: 6700, sta: '성환'},
-                {x: 100, y: 6800, sta: '직산'},
-                {x: 100, y: 6900, sta: '두정'},
-                {x: 100, y: 7000, sta: '천안'},
+                {x: 100, y: 6800, sta: '직산'}, //경부선 끝
+                {x: 100, y: 6900, sta: '두정'}, //천안직결선
+                {x: 100, y: 7000, sta: '천안'}, //장항선 시작
                 {x: 100, y: 7100, sta: '봉명'},
                 {x: 100, y: 7200, sta: '쌍용'},
                 {x: 100, y: 7300, sta: '아산'},
@@ -328,7 +328,7 @@
                 {x: 100, y: 7500, sta: '배방'},
                 {x: 100, y: 7600, sta: '온양온천'},
                 {x: 100, y: 7700, sta: '신창'},
-                {x: 100, y: 4300, sta: '구일'},
+                {x: 100, y: 4300, sta: '구일'}, //경인선 시작
                 {x: 100, y: 4400, sta: '개봉'},
                 {x: 100, y: 4500, sta: '오류동'},
                 {x: 100, y: 4600, sta: '온수'},
@@ -347,9 +347,9 @@
                 {x: 100, y: 5900, sta: '제물포'},
                 {x: 100, y: 6000, sta: '도원'},
                 {x: 100, y: 6100, sta: '동인천'},
-                {x: 100, y: 6200, sta: '인천'},
-                {x: 300, y: 4600, sta: '광명'},
-                {x: 300, y: 5900, sta: '서동탄'}
+                {x: 100, y: 6200, sta: '인천'}, //경인선 끝
+                {x: 300, y: 4600, sta: '광명'}, //경부고속선
+                {x: 300, y: 5900, sta: '서동탄'} //병점기지선
             ]
         };
         mapData[1002] = {
@@ -366,7 +366,7 @@
                 data: '100,2500 100,2900'
             }],
             points: [
-                {x: 100, y: 500, sta: '성수'},
+                {x: 100, y: 500, sta: '성수'}, //을지로순환선 시작
                 {x: 500, y: 500, sta: '건대입구'},
                 {x: 500, y: 600, sta: '구의'},
                 {x: 500, y: 700, sta: '강변'},
@@ -408,19 +408,17 @@
                 {x: 100, y: 900, sta: '상왕십리'},
                 {x: 100, y: 800, sta: '왕십리'},
                 {x: 100, y: 700, sta: '한양대'},
-                {x: 100, y: 600, sta: '뚝섬'},
-
-                {x: 100, y: 470, sta: '(지선)'}, //성수
+                {x: 100, y: 600, sta: '뚝섬'}, //을지로순환선 끝
+                {x: 100, y: 470, sta: '(지선)'}, //성수역, 성수지선 시작
                 {x: 100, y: 400, sta: '용답'},
                 {x: 100, y: 300, sta: '신답'},
                 {x: 100, y: 200, sta: '용두'},
-                {x: 100, y: 100, sta: '신설동'},
-
-                {x: 100, y: 2530, sta: '(지선)'}, //신도림
+                {x: 100, y: 100, sta: '신설동'}, //성수지선 끝
+                {x: 100, y: 2530, sta: '(지선)'}, //신도림역, 신정지선
                 {x: 100, y: 2600, sta: '도림천'},
                 {x: 100, y: 2700, sta: '양천구청'},
                 {x: 100, y: 2800, sta: '신정네거리'},
-                {x: 100, y: 2900, sta: '까치산'}
+                {x: 100, y: 2900, sta: '까치산'} //신정지선 끝
             ]
         };
         mapData[1101] = {
@@ -434,7 +432,7 @@
                 data: '100,2000 150,2050 450,2050 500,2100 500,2200'
             }],
             points: [
-                {x: 100, y: 100, sta: '문산'},
+                {x: 100, y: 100, sta: '문산'}, //경의선 시작
                 {x: 100, y: 200, sta: '파주'},
                 {x: 100, y: 300, sta: '월롱'},
                 {x: 100, y: 400, sta: '금촌'},
@@ -453,21 +451,21 @@
                 {x: 100, y: 1700, sta: '화전'},
                 {x: 100, y: 1800, sta: '수색'},
                 {x: 100, y: 1900, sta: '디지털미디어시티'},
-                {x: 100, y: 2000, sta: '가좌'},
+                {x: 100, y: 2000, sta: '가좌'}, //용산선 분기. 일단 경의선 따라감
                 {x: 500, y: 2100, sta: '신촌'},
-                {x: 500, y: 2200, sta: '서울역'},
-                {x: 100, y: 2100, sta: '홍대입구'},
+                {x: 500, y: 2200, sta: '서울역'}, //경의선 끝
+                {x: 100, y: 2100, sta: '홍대입구'}, //용산선 시작
                 {x: 100, y: 2200, sta: '서강대'},
                 {x: 100, y: 2300, sta: '공덕'},
                 {x: 100, y: 2400, sta: '효창공원앞'},
-                {x: 100, y: 2500, sta: '용산'},
+                {x: 100, y: 2500, sta: '용산'}, //용산선 & 경원선 경계
                 {x: 100, y: 2600, sta: '이촌'},
                 {x: 100, y: 2700, sta: '서빙고'},
                 {x: 100, y: 2800, sta: '한남'},
                 {x: 100, y: 2900, sta: '옥수'},
                 {x: 100, y: 3000, sta: '응봉'},
                 {x: 100, y: 3100, sta: '왕십리'},
-                {x: 100, y: 3200, sta: '청량리'},
+                {x: 100, y: 3200, sta: '청량리'}, //경원선 & 중앙선 경계
                 {x: 100, y: 3300, sta: '회기'},
                 {x: 100, y: 3400, sta: '중랑'},
                 {x: 100, y: 3500, sta: '상봉'},
@@ -488,7 +486,7 @@
                 {x: 100, y: 5000, sta: '양평'},
                 {x: 100, y: 5100, sta: '원덕'},
                 {x: 100, y: 5200, sta: '용문'},
-                {x: 100, y: 5300, sta: '지평'}
+                {x: 100, y: 5300, sta: '지평'} //중앙선 끝
             ]
         };
 
