SuIn-BunDang line

--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
             lines['8호선'] = 1008;
             lines['9호선'] = 1009;
             lines['경의중앙선'] = 1101;
+            lines['수인분당선'] = 1102;
             return lines[name] === undefined ? null : lines[name];
         }
 
