--- a/index.html
+++ b/index.html
@@ -211,6 +211,7 @@
             colors['1007'] = '#747F00';
             colors['1008'] = '#E6186C';
             colors['1009'] = '#BDB092';
+            colors['1102'] = '#FABE00';
             const color = colors[lineId] ? colors[lineId] : '#000000';
 
             const result = {};
