--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
             lines['경의중앙선'] = 1101;
             lines['수인분당선'] = 1102;
             lines['신분당선'] = 1103;
+            lines['경춘선'] = 1104;
             return lines[name] === undefined ? null : lines[name];
         }
 
