--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
             colors['1008'] = '#E6186C';
             colors['1009'] = '#BDB092';
             colors['1102'] = '#FABE00';
+            colors['1103'] = '#D31145';
+            colors['1104'] = '#178C72';
             const color = colors[lineId] ? colors[lineId] : '#000000';
 
             const result = {};
