--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@
             lines['수인분당선'] = 1102;
             lines['신분당선'] = 1103;
             lines['경춘선'] = 1104;
+            lines['용인경전철'] = 1105;
+            lines['의정부경전철'] = 1106;
+            lines['경강선'] = 1107;
+            lines['우이신설선'] = 1108;
+            lines['서해선'] = 1009;
             return lines[name] === undefined ? null : lines[name];
         }
 
@@ -216,6 +221,11 @@
             colors['1102'] = '#FABE00';
             colors['1103'] = '#D31145';
             colors['1104'] = '#178C72';
+            colors['1105'] = '#56AD2D';
+            colors['1106'] = '#FD8100';
+            colors['1107'] = '#0054A6';
+            colors['1108'] = '#B7C450';
+            colors['1109'] = '#8FC31F';
             const color = colors[lineId] ? colors[lineId] : '#000000';
 
             const result = {};
