--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     </div>
     <div class=body>
         <div class="subway_map" id="subway_map">
-            <!-- Subway Map will be created via JS -->
+            <!-- Subway Map will be created here via JS -->
         </div>
         <hr>
         <p>© 2023 Hyeon.js, All rights reserved.</p>
