--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         
         div.drawer {
             margin: 0px;
-            background-color: #616161;
+            background-color: white;
             color: white;
             max-height: 0px;
             height: auto;
@@ -62,7 +62,6 @@
             border: 0px solid #000000;
             border-collapse: collapse;
             width: 100%;
-            color: white;
             font-size: 16px;
         }
         td {
