line's path is changed

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                 data: '100,100 100,500'
             }, {
                 type: 'polygon',
-                data: '100,500 100,2500 150,2550 450,2550 500,2600 500,500 450,450 150,450'
+                data: '100,500 100,2500 150,2550 300,2550 400,2650 450,2650 500,2600 500,500 450,450 150,450'
             }, {
                 type: 'polyline',
                 data: '100,2500 100,2900'
