--- a/index.html
+++ b/index.html
@@ -443,13 +443,13 @@
         mapData[1002] = {
             color: '#00A84D',
             height: 3000,
-            lines: [{
+            lines: [{ //성수지선
                 type: 'polyline',
                 data: '100,100 100,500'
-            }, {
+            }, { //을지로순환선
                 type: 'polygon',
                 data: '100,500 100,2500 150,2550 300,2550 400,2650 450,2650 500,2600 500,500 450,450 150,450'
-            }, {
+            }, { //신정지선
                 type: 'polyline',
                 data: '100,2500 100,2900'
             }],
