--- a/index.html
+++ b/index.html
@@ -509,6 +509,55 @@
                 {x: 100, y: 2900, sta: '까치산'} //신정지선 끝
             ]
         };
+        mapData[1006] = {
+            color: '#CD7C2F',
+            height: 3800,
+            lines: [{
+                type: 'polyline',
+                data: '100,400 150,350 500,200 500,100 100,100 100,3700'
+            }],
+            points: [
+                {x: 500, y: 200, sta: '역촌'}, //응암순환 시작
+                {x: 500, y: 100, sta: '불광'},
+                {x: 100, y: 100, sta: '독바위'},
+                {x: 100, y: 200, sta: '연신내'},
+                {x: 100, y: 300, sta: '구산'},
+                {x: 100, y: 400, sta: '응암'}, //응암순환 끝
+                {x: 100, y: 500, sta: '새절'},
+                {x: 100, y: 600, sta: '증산'}, 
+                {x: 100, y: 700, sta: '디지털미디어시티'}, 
+                {x: 100, y: 800, sta: '월드컵경기장'}, 
+                {x: 100, y: 900, sta: '마포구청'}, 
+                {x: 100, y: 1000, sta: '망원'}, 
+                {x: 100, y: 1100, sta: '합정'}, 
+                {x: 100, y: 1200, sta: '상수'}, 
+                {x: 100, y: 1300, sta: '광흥창'}, 
+                {x: 100, y: 1400, sta: '대흥'}, 
+                {x: 100, y: 1500, sta: '공덕'}, 
+                {x: 100, y: 1600, sta: '효창공원앞'}, 
+                {x: 100, y: 1700, sta: '삼각지'}, 
+                {x: 100, y: 1800, sta: '녹사평'}, 
+                {x: 100, y: 1900, sta: '이태원'}, 
+                {x: 100, y: 2000, sta: '한강진'}, 
+                {x: 100, y: 2100, sta: '버티고개'}, 
+                {x: 100, y: 2200, sta: '약수'}, 
+                {x: 100, y: 2300, sta: '청구'}, 
+                {x: 100, y: 2400, sta: '신당'}, 
+                {x: 100, y: 2500, sta: '동묘앞'}, 
+                {x: 100, y: 2600, sta: '창신'}, 
+                {x: 100, y: 2700, sta: '보문'}, 
+                {x: 100, y: 2800, sta: '안암'}, 
+                {x: 100, y: 2900, sta: '고려대'}, 
+                {x: 100, y: 3000, sta: '월곡'}, 
+                {x: 100, y: 3100, sta: '상월곡'}, 
+                {x: 100, y: 3200, sta: '돌곶이'}, 
+                {x: 100, y: 3300, sta: '석계'}, 
+                {x: 100, y: 3400, sta: '태릉입구'}, 
+                {x: 100, y: 3500, sta: '화랑대'}, 
+                {x: 100, y: 3600, sta: '봉화산'}, 
+                {x: 100, y: 3700, sta: '신내'}
+            ]
+        };
         mapData[1101] = {
             color: '#77C4A3',
             height: 5400,
