--- a/index.html
+++ b/index.html
@@ -514,12 +514,12 @@
             height: 3800,
             lines: [{
                 type: 'polyline',
-                data: '100,400 150,350 500,200 500,100 100,100 100,3700'
+                data: '100,400 150,350 450,350 500,300 500,100 100,100 100,3700'
             }],
             points: [
-                {x: 500, y: 200, sta: '역촌'}, //응암순환 시작
-                {x: 500, y: 100, sta: '불광'},
-                {x: 100, y: 100, sta: '독바위'},
+                {x: 500, y: 300, sta: '역촌'}, //응암순환 시작
+                {x: 500, y: 200, sta: '불광'},
+                {x: 500, y: 100, sta: '독바위'},
                 {x: 100, y: 200, sta: '연신내'},
                 {x: 100, y: 300, sta: '구산'},
                 {x: 100, y: 400, sta: '응암'}, //응암순환 끝
