--- a/index.html
+++ b/index.html
@@ -243,6 +243,16 @@
                     }
                 }
             })
+            else if (lineId == 1006) data.data.forEach((e, i) => {
+                const pos = mapData[lineId].points[i];
+                if (e.up) {
+                    src += '<image xlink:href="./images/up.png" x="' + (pos.x + 10) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
+                }
+                if (e.dn) {
+                    if (i > 2) src += '<image xlink:href="./images/dn.png" x="' + (pos.x - 30) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
+                    else src += '<image xlink:href="./images/up.png" x="' + (pos.x + 10) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
+                }
+            })
             else data.data.forEach((e, i) => {
                 const pos = mapData[lineId].points[i];
                 if (e.up) {
