--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
             height: 3800,
             lines: [{
                 type: 'polyline',
-                data: '100,400 150,350 450,350 500,300 500,100 100,100 100,3700'
+                data: '100,400 150,350 450,350 500,300 500,100 150,100 100,150 100,3700'
             }],
             points: [
                 {x: 500, y: 300, sta: '역촌'}, //응암순환 시작
