--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             margin: 0px;
             text-align: center;
             background-color: white;
+            font-family: NanumGothic;
         }
 
         div.header {
@@ -88,7 +89,7 @@
         text {
             font-size: 34px;
             text-anchor: start;
-            font-family: 'NanumSquare';
+            font-family: 'NanumGothic';
             text-anchor: start;
             dominant-baseline: middle;
         }
@@ -103,8 +104,8 @@
     </style>
 </head>
 
-<body>
-    <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-square.css" rel="stylesheet">
+<body>\
+    <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-barun-gothic.css" rel="stylesheet">
     <div class=header>
         <a id="menu" onclick="openMenu();">
             <i class="material-icons">&#xE5D2;</i>
