--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </style>
 </head>
 
-<body>\
+<body>
     <link href="https://hangeul.pstatic.net/hangeul_static/css/nanum-barun-gothic.css" rel="stylesheet">
     <div class=header>
         <a id="menu" onclick="openMenu();">
