--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                 <td onclick='loadData(this);'>9호선</td>
             </tr>
             <tr>
-                <td onclick='loadData(this);'>경의중앙선</td>
-                <td onclick='loadData(this);'>수인분당선</td>
+                <td onclick='loadData(this);'>경의·중앙선</td>
+                <td onclick='loadData(this);'>수인·분당선</td>
                 <td onclick='loadData(this);'>신분당선</td>
             </tr>
             <tr>
