--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             lines['경강선'] = 1107;
             lines['우이신설선'] = 1108;
             lines['서해선'] = 1109;
-            // lines['김포도시철도'] = 1110; 시간표 변경으로 인해 백-엔드 다시 구축 필요
+            lines['김포도시철도'] = 1110;
             lines['신림선'] = 1111;
             lines['공항철도'] = 1500;
             lines['인천1호선'] = 1501;
