--- a/index.html
+++ b/index.html
@@ -229,39 +229,39 @@
             if (lineId == 1002) data.data.forEach((e, i) => {
                 const pos = mapData[lineId].points[i];
                 if (i == 0 || (23 <= i && i <= 47)) {
-                    if (e.dn) {
+                    e.dn.forEach((e, i) => {
                         src += '<image xlink:href="./images/up.png" x="' + (pos.x - 30) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
-                    }
-                    if (e.up) {
+                    });
+                    e.up.forEach((e, i) => {
                         src += '<image xlink:href="./images/dn.png" x="' + (pos.x + 10) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
-                    }
+                    });
                 } else {
-                    if (e.up) {
+                    e.up.forEach((e, i) => {
                         src += '<image xlink:href="./images/up.png" x="' + (pos.x - 30) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
-                    }
-                    if (e.dn) {
+                    });
+                    e.dn.forEach((e, i) => {
                         src += '<image xlink:href="./images/dn.png" x="' + (pos.x + 10) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
-                    }
+                    });
                 }
             })
             else if (lineId == 1006) data.data.forEach((e, i) => {
                 const pos = mapData[lineId].points[i];
-                if (e.up) {
+                e.up.forEach((e, i) => {
                     src += '<image xlink:href="./images/up.png" x="' + (pos.x + 10) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
-                }
-                if (e.dn) {
+                });
+                e.dn.forEach((e, i) => {
                     if (i > 2) src += '<image xlink:href="./images/dn.png" x="' + (pos.x - 30) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
                     else src += '<image xlink:href="./images/up.png" x="' + (pos.x + 10) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
-                }
+                });
             })
             else data.data.forEach((e, i) => {
                 const pos = mapData[lineId].points[i];
-                if (e.up) {
+                e.up.forEach((e, i) => {
                     src += '<image xlink:href="./images/up.png" x="' + (pos.x - 30) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
-                }
-                if (e.dn) {
+                });
+                e.dn.forEach((e, i) => {
                     src += '<image xlink:href="./images/dn.png" x="' + (pos.x + 10) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
-                }
+                });
             })
             document.getElementById("subway_map").innerHTML = map + src;
         }
