--- a/index.html
+++ b/index.html
@@ -229,19 +229,11 @@
             if (lineId == 1002) data.data.forEach((e, i) => {
                 const pos = mapData[lineId].points[i];
                 if (i == 0 || (23 <= i && i <= 47)) {
-                    e.dn.forEach((e, i) => {
-                        src += '<image xlink:href="./images/up.png" x="' + (pos.x - 30) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
-                    });
-                    e.up.forEach((e, i) => {
-                        src += '<image xlink:href="./images/dn.png" x="' + (pos.x + 10) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
-                    });
+                    src += drawTrains(e.dn, 'up', pos, -30);
+                    src += drawTrains(e.up, 'dn', pos, 10);
                 } else {
-                    e.up.forEach((e, i) => {
-                        src += '<image xlink:href="./images/up.png" x="' + (pos.x - 30) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
-                    });
-                    e.dn.forEach((e, i) => {
-                        src += '<image xlink:href="./images/dn.png" x="' + (pos.x + 10) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
-                    });
+                    src += drawTrains(e.up, 'up', pos, -30);
+                    src += drawTrains(e.dn, 'dn', pos, 10);
                 }
             })
             else if (lineId == 1006) data.data.forEach((e, i) => {
@@ -256,14 +248,19 @@
             })
             else data.data.forEach((e, i) => {
                 const pos = mapData[lineId].points[i];
-                e.up.forEach((e, i) => {
-                    src += '<image xlink:href="./images/up.png" x="' + (pos.x - 30) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
-                });
-                e.dn.forEach((e, i) => {
-                    src += '<image xlink:href="./images/dn.png" x="' + (pos.x + 10) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
-                });
+                src += drawTrains(e.up, 'up', pos, -30);
+                src += drawTrains(e.dn, 'dn', pos, 10);
             })
             document.getElementById("subway_map").innerHTML = map + src;
+        }
+
+        function drawTrains(trains, icon, pos, deltaX) {
+            if (trains.length == 0) return '';
+            let src = '';
+            trains.forEach((e) => {
+                src += '<image xlink:href="./images/' + icon + '.png" x="' + (pos.x + deltaX) + '" y="' + (pos.y - 20) + '" width="20px" opacity="0.9" />';
+            });
+            return src;
         }
 
         function drawMap(lineId, data) {
