--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <!-- Subway Map will be created here via JS -->
         </div>
         <hr>
-        <p>© 2023 Hyeon.js, All rights reserved.</p>
+        <p>© 2023-2024 Hyeon.js, All rights reserved.</p>
     </div>
     <script>
         var isOpened = false;
