--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
             lines['7호선'] = 1007;
             lines['8호선'] = 1008;
             lines['9호선'] = 1009;
-            lines['경의중앙선'] = 1101;
-            lines['수인분당선'] = 1102;
+            lines['경의·중앙선'] = 1101;
+            lines['수인·분당선'] = 1102;
             lines['신분당선'] = 1103;
             lines['경춘선'] = 1104;
             lines['용인경전철'] = 1105;
