--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </tr>
             <tr>
                 <td onclick='loadData(this);'>신림선</td>
-                <td onclick='loadData(this);'>김포도시철도</td>
+                <td onclick='loadData(this);'>김포골드라인</td>
                 <td onclick='loadData(this);'>&nbsp;</td>
             </tr>
         </table>
@@ -211,7 +211,7 @@
             lines['경강선'] = 1107;
             lines['우이신설선'] = 1108;
             lines['서해선'] = 1109;
-            lines['김포도시철도'] = 1110;
+            lines['김포골드라인'] = 1110;
             lines['신림선'] = 1111;
             lines['공항철도'] = 1500;
             lines['인천1호선'] = 1501;
